--- a/wp-content-checklist/package.json
+++ b/wp-content-checklist/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.10.5",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.5",
