--- a/wp-content-checklist/package.json
+++ b/wp-content-checklist/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spreadsheet": "^0.7.8",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
