--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.3",
+    "copy-to-clipboard": "^3.3.3",
     "vite": "^4.0.4",
     "zustand": "^4.3.2"
   },
